<resources>
    <string name="app_name">ScoutingTerminal</string>
    <string name="robot_height_hint">Enter robot height</string>
    <string name="t_height">Height</string>
    <string name="t_weight">Weight</string>
    <string name="t_team">Team</string>
    <string-array name="array_name">
        <item>Team 101</item>
        <item>Team 229</item>
        <item>Team 364</item>
        <item>Team 421</item>
        <item>Team 539</item>
        <item>Team 668</item>
        <item>Team 714</item>
        <item>Team 840</item>
        <item>Team 978</item>
    </string-array>
    <string-array name="array_speed">
        <item>Slowest</item>
        <item>Slow</item>
        <item>Slower than Average</item>
        <item>Average</item>
        <item>Faster than Average</item>
        <item>Fast</item>
        <item>Fastest</item>
    </string-array>
    <string name="t_speed">Speed</string>
    <string name="t_send">Send</string>
    <string name="t_msg_success">Message Sent Successfully!</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_2">This is the Second tab.</string>
    <string name="tab_3">This is the Third tab.</string>
    <string name="num_hint">0.0</string>
    <string name="display_fields">Display fields.</string>
</resources>
